versioned_docs/version-2023.1/01_getting-started/03_go-to-the-next-level/09_state_management.md
---
title: 'Go to the next level - state management'
sidebar_label: 'State Management'
id: state-management
keywords: [getting started, quick start, next level, state management]
tags:
    - getting started
    - quick start
    - next level
    - state management
---

[State machines](../../../server/state-machine/introduction/) enable you to control workflow by defining the transitions from state to state. This example enables you to build a very simple state machine so that you can add new trades. We shall use the `TRADE_STATUS` field, which can have three possible states: `NEW`, `ALLOCATED`, or `CANCELLED`.

Based on below state machine:
* TradeStatus `NEW` can change to `ALLOCATED` or `CANCELLED`.
* TradeStatus `ALLOCATED` can change to `CANCELLED`.
* TradeStatus `CANCELLED` can’t go anywhere else.
* `NEW` is the only state you can use to insert new records.

![](/img/diagram-of-states.png)


## Section objectives
The goal of this section is to:
- create a state machine
- create allocated, cancel and modify Event Handlers
- add our state machine in our Event Handlers.


## Data model

Make sure that you added the `TRADE_STATUS` field to the `TRADE` table in the **alpha-tables-dictionary.kts** file.

```kotlin {5} title="alpha-tables-dictionary.kts"
tables {
    table (name = "TRADE", id = 11000) {

        ...
        TRADE_STATUS
        ...

        primaryKey {
            TRADE_ID
        }
    }
}
```

If `TRADE_STATUS` is missing, add it in, run **generateFields** to generate the fields and then **generateDao** to create the DAOs.

## Create the State Machine logic and data classes

First we need to define our state machine class for type `Trade`. To do this, create a file called `TradeStateMachine.kt` under **alpha-eventhandler/src/main/kotlin/global/genesis** (you may need to create this path yourself).

Add a state machine definition and assign a field in the `onCommit` block:

```kotlin title="TradeStateMachine.kt"
package global.genesis

import com.google.inject.Inject
import global.genesis.commons.annotation.Module
import global.genesis.db.rx.entity.multi.AsyncEntityDb
import global.genesis.db.statemachine.StateMachine
import global.genesis.db.statemachine.Transition
import global.genesis.gen.dao.Trade
import global.genesis.gen.dao.enums.TradeStatus

@Module
class TradeStateMachine @Inject constructor(
    db: AsyncEntityDb
) {
    private val internalState: StateMachine<Trade, TradeStatus, TradeEffect> = db.stateMachineBuilder {
        readState { tradeStatus }

        state(TradeStatus.NEW) {
            // Trade fields can be changed when status is NEW
            isMutable = true

            initialState(TradeEffect.New) {
                onValidate { trade ->
                    if (trade.isTradeIdInitialised && trade.tradeId.isNotEmpty()) {
                        verify {
                            db hasNoEntry Trade.ById(trade.tradeId)
                        }
                    }
                }
            }

            onCommit { trade ->
                if (trade.enteredBy == "TestUser") {
                    trade.price = 10.0
                }
            }

            transition(TradeStatus.ALLOCATED, TradeEffect.Allocated)
            transition(TradeStatus.CANCELLED, TradeEffect.Cancelled)
        }

        state(TradeStatus.ALLOCATED) {
            // Trade fields cannot be changed when status is ALLOCATED
            isMutable = false

            transition(TradeStatus.CANCELLED, TradeEffect.Cancelled)
        }

        state(TradeStatus.CANCELLED) {
            // Trade fields cannot be changed when status is CANCELLED
            isMutable = false
        }
    }

    suspend fun insert(trade: Trade): Transition<Trade, TradeStatus, TradeEffect> = internalState.create(trade)

    suspend fun modify(tradeId: String, modify: suspend (Trade) -> Unit): Transition<Trade, TradeStatus, TradeEffect>? =
        internalState.update(Trade.ById(tradeId)) { trade, _ -> modify(trade) }

    suspend fun modify(trade: Trade): Transition<Trade, TradeStatus, TradeEffect>? = internalState.update(trade)
}

sealed class TradeEffect {
    object New : TradeEffect()
    object Allocated : TradeEffect()
    object Cancelled : TradeEffect()
}
```

Next, we want to create two data classes that will be used in the cancel and allocated Event Handlers. Create two data classes called `TradeAllocated.kt` and `TradeCancelled.kt` under **alpha-messages/src/main/kotlin/global/genesis/message/event/**.

Both data classes have a single field: `tradeId` of type `String`.

TradeAllocated:

```kotlin title="TradeAllocated.kt"
package global.genesis.message.event

data class TradeAllocated(val tradeId: String)
```

TradeCancelled:

```kotlin title="TradeCancelled.kt"
package global.genesis.message.event

data class TradeCancelled(val tradeId: String)
```

## Updating the dependencies for alpha-script-config

In order to use the following `TradeStateMachine` and data classes (`TradeAllocated` and `TradeCancelled`) we just defined, we need to add the **alpha-eventhandler** and **alpha-messages** modules as dependencies inside the **alpha-script-config** modules `build.gradle` file.

```kotlin title="alpha-script-config/build.gradle"
api(project(":alpha-eventhandler"))
api(project(":alpha-messages"))
```

Finally, refresh your gradle project.

## Edit the Event Handler to add an integrated state machine

Let's edit the Event Handler to add an integrated state machine. First, in the **alpha-eventhandler.kts** file, declare a variable to be visible to all events by injecting the class `TradeStateMachine` that we have just created. 

```kotlin title="alpha-eventhandler.kts"
import global.genesis.TradeStateMachine
import global.genesis.gen.dao.Trade
import global.genesis.message.event.TradeAllocated
import global.genesis.message.event.TradeCancelled
```

```kotlin {2} title="alpha-eventhandler.kts"
eventHandler {
    val stateMachine = inject<TradeStateMachine>()

    eventHandler<Trade>(name = "TRADE_INSERT", transactional = true) {
        ...
    }
}
```

Then, replace the `entryDb.insert(event.details)` with the highlighted lines below in the `TRADE_INSERT` `onCommit` block.

```kotlin {4-6} title="alpha-eventhandler.kts"
eventHandler<Trade>(name = "TRADE_INSERT", transactional = true) {
    schemaValidation = false
    onCommit { event ->
        val trade = event.details
        trade.enteredBy = event.userName
        stateMachine.insert(trade)
        ack()
    }
}
```

:::info
You may have noticed we are passing a `transactional = true` parameter into our event handler. This ensures any exception or nack returned will result in a complete rollback of all parts of the onCommit and onValidate (the transaction also covers read commands) blocks. You can read more about transactions [here](../../../server/event-handler/basics/#transactional-event-handlers-acid).
:::

## Add Event Handlers for the rest of the states

Create a new Event Handler called `TRADE_CANCELLED` to handle cancellations. Then integrate the state machine in it.

```kotlin title="alpha-eventhandler.kts"
eventHandler<TradeCancelled>(name = "TRADE_CANCELLED", transactional = true) {
    onCommit { event ->
        val message = event.details
        stateMachine.modify(message.tradeId) { trade ->
            trade.tradeStatus = TradeStatus.CANCELLED
        }
        ack()
    }
}
```

Create a new Event Handler called `TRADE_ALLOCATED` to handle completion. Integrate the state machine in it.

```kotlin title="alpha-eventhandler.kts"
eventHandler<TradeAllocated>(name = "TRADE_ALLOCATED", transactional = true) {
    onCommit { event ->
        val message = event.details
        stateMachine.modify(message.tradeId) { trade ->
            trade.tradeStatus = TradeStatus.ALLOCATED
        }
        ack()
    }
}
```

Create a new Event Handler called `TRADE_MODIFY` to handle modifications. Integrate the state machine in it.

```kotlin {4} title="alpha-eventhandler.kts"
eventHandler<Trade>(name = "TRADE_MODIFY", transactional = true) {
    onCommit { event ->
        val trade = event.details
        stateMachine.modify(trade)
        ack()
    }
}
```

Your **alpha-eventhandler.kts** file at the end should look like this:

```kotlin {1-4} title="alpha-eventhandler.kts"
import global.genesis.TradeStateMachine
import global.genesis.gen.dao.Trade
import global.genesis.message.event.TradeAllocated
import global.genesis.message.event.TradeCancelled

eventHandler {
    val stateMachine = inject<TradeStateMachine>()

    eventHandler<Trade>(name = "TRADE_INSERT", transactional = true) {
        schemaValidation = false
        onCommit { event ->
            val trade = event.details
            trade.enteredBy = event.userName
            stateMachine.insert(trade)
            ack()
        }
    }

    eventHandler<TradeCancelled>(name = "TRADE_CANCELLED", transactional = true) {
        onCommit { event ->
            val message = event.details
            stateMachine.modify(message.tradeId) { trade ->
                trade.tradeStatus = TradeStatus.CANCELLED
            }
            ack()
        }
    }

    eventHandler<TradeAllocated>(name = "TRADE_ALLOCATED", transactional = true) {
        onCommit { event ->
            val message = event.details
            stateMachine.modify(message.tradeId) { trade ->
                trade.tradeStatus = TradeStatus.ALLOCATED
            }
            ack()
        }
    }

    eventHandler<Trade>(name = "TRADE_MODIFY", transactional = true) {
        onCommit { event ->
            val trade = event.details
            stateMachine.modify(trade)
            ack()
        }
    }
}
```

You want to manage the state of the trade, so we don't want a delete Event Handler. If a trade is incorrect and needs to be deleted, similar functionality can be achieved by cancelling the trade.

### Build and deploy

import BuildAndDeploy from '/snippet/_build_and_deploy.md'

<BuildAndDeploy />

## Conclusion
With this, we finish showing how an application can add state management. If you want to see it in action, go to [Endpoints](../../../server/integration/rest-endpoints/introduction/) for information about testing the back end.

You can use the [positions app tutorial repo](https://github.com/genesiscommunitysuccess/positions-app-tutorial/tree/Complete_positions_app/server/jvm) as a reference point for the event handlers. Note that this repo is a complete application and may not reflect the changes made in this page.
